toolkit2: merge changes from trunk
git-svn-id: http://svn.terracotta.org/svn/ehcache@5780 b9324663-ca0f-0410-8574-be9b3887307d